--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <hgroup class="auto-fadein">
     <h1>Project-ddp2014</h1>
     <h2>Project presentation of Unit conversion dynamic UI</h2>
-    <p>Alok Juneja<br/>Presentation made on Sat Jun 14 19:02:00 2014</p>
+    <p>Alok Juneja<br/>Presentation made on Sat Jun 14 21:02:39 2014</p>
   </hgroup>
   <article></article>  
 </slide>
@@ -246,7 +246,8 @@ shinyServer(
   <![endif]-->
 </body>
   <!-- Load Javascripts for Widgets -->
-  
+  <script src="./assets/js/impress.js"></script>
+
   <!-- MathJax: Fall back to local if CDN offline but local image fonts are not supported (saves >100MB) -->
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
