--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <hgroup class="auto-fadein">
     <h1>Project-ddp2014</h1>
     <h2>Project presentation of Unit conversion dynamic UI</h2>
-    <p>Alok Juneja<br/>Presentation made on Sun Jun 15 16:24:01 2014</p>
+    <p>Alok Juneja<br/>Presentation made on Sun Jun 15 17:38:05 2014</p>
   </hgroup>
   <article></article>  
 </slide>
@@ -44,20 +44,18 @@
     <!-- SLIDES -->
     <slide class="" id="slide-1" style="background:;">
   <hgroup>
-    <h2>Read-And-Delete</h2>
-  </hgroup>
-  <article data-timings="">
-    
-  </article>
-  <!-- Presenter Notes -->
-</slide>
-
-<slide class="class" id="id" style="background:;">
-  <hgroup>
     <h2>Why Unit conversion?</h2>
   </hgroup>
   <article data-timings="">
-    <p>In the present global In our daily life where itemthe field of science, the metric system is used in performing measurements. The metric system is actually easier to use than the English system, as you will see shortly. The metric system uses prefixes to indicate the magnitude of a measured quantity. The prefix itself gives the conversion factor. You should memorize some of the common prefixes, as you will be using them on a regular basis.</p>
+    <p>In our daily life we have to quantify the things that we use/consume.</p>
+
+<p>A system of measurement is a set of units of measurement which can be used to specify anything which can be measured. </p>
+
+<p>In modern systems of measurement, some quantities are designated as fundamental units, meaning all other needed units can be derived from them, whereas in the early and most historic eras, the units were given by fiat (see statutory law) by the ruling entities and were not necessarily well inter-related or self-consistent.</p>
+
+<p>The metric system is an internationally agreed decimal system of measurement that was originally based on the mètre des Archives and the kilogramme des Archives introduced by France in 1799.</p>
+
+<p>In the present global In our daily life where itemthe field of science, the metric system is used in performing measurements. The metric system is actually easier to use than the English system, as you will see shortly. The metric system uses prefixes to indicate the magnitude of a measured quantity. The prefix itself gives the conversion factor. You should memorize some of the common prefixes, as you will be using them on a regular basis.</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -205,32 +203,26 @@ shinyServer(
     <ul>
       <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=1 title='Read-And-Delete'>
+        data-slide=1 title='Why Unit conversion?'>
          1
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=2 title='Why Unit conversion?'>
+        data-slide=2 title='Different systems'>
          2
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=3 title='Different systems'>
+        data-slide=3 title='R code and shiny (ui.R)'>
          3
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=4 title='R code and shiny (ui.R)'>
+        data-slide=4 title='R code and shiny (server.R)'>
          4
-      </a>
-    </li>
-    <li>
-      <a href="#" target="_self" rel='tooltip' 
-        data-slide=5 title='R code and shiny (server.R)'>
-         5
       </a>
     </li>
   </ul>
