--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <hgroup class="auto-fadein">
     <h1>Project-ddp2014</h1>
     <h2>Project presentation of Unit conversion dynamic UI</h2>
-    <p>Alok Juneja<br/>Presentation made on Sun Jun 15 17:38:05 2014</p>
+    <p>Alok Juneja<br/>Presentation made on Sun Jun 15 18:03:09 2014</p>
   </hgroup>
   <article></article>  
 </slide>
@@ -49,9 +49,18 @@
   <article data-timings="">
     <p>In our daily life we have to quantify the things that we use/consume.</p>
 
-<p>A system of measurement is a set of units of measurement which can be used to specify anything which can be measured. </p>
+<p>A system of measurement is a set of units of measurement which can be used to specify anything which can be measured.</p>
 
-<p>In modern systems of measurement, some quantities are designated as fundamental units, meaning all other needed units can be derived from them, whereas in the early and most historic eras, the units were given by fiat (see statutory law) by the ruling entities and were not necessarily well inter-related or self-consistent.</p>
+<p>System of measurement</p>
+
+<ol>
+<li><p>Metric system:</p>
+
+<p>evolved since the adoption of the first well-defined system in France in 1795</p>
+
+<p>in the early metric system there were two fundamental or base units, the metre for length and the gram for mass.</p></li>
+<li><p>Imperial and US customary units:</p></li>
+</ol>
 
 <p>The metric system is an internationally agreed decimal system of measurement that was originally based on the mètre des Archives and the kilogramme des Archives introduced by France in 1799.</p>
 
