--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <hgroup class="auto-fadein">
     <h1>Project-ddp2014</h1>
     <h2>Project presentation of Unit conversion dynamic UI</h2>
-    <p>Alok Juneja<br/>Presentation made on Sun Jun 15 18:03:09 2014</p>
+    <p>Alok Juneja<br/>Presentation made on Sun Jun 15 18:08:36 2014</p>
   </hgroup>
   <article></article>  
 </slide>
@@ -47,9 +47,7 @@
     <h2>Why Unit conversion?</h2>
   </hgroup>
   <article data-timings="">
-    <p>In our daily life we have to quantify the things that we use/consume.</p>
-
-<p>A system of measurement is a set of units of measurement which can be used to specify anything which can be measured.</p>
+    <p>A system of measurement is a set of units of measurement which we use in our daily life to quantify the things that we use/consume.</p>
 
 <p>System of measurement</p>
 
@@ -62,20 +60,11 @@
 <li><p>Imperial and US customary units:</p></li>
 </ol>
 
-<p>The metric system is an internationally agreed decimal system of measurement that was originally based on the mètre des Archives and the kilogramme des Archives introduced by France in 1799.</p>
+<p>--- .class #id </p>
 
-<p>In the present global In our daily life where itemthe field of science, the metric system is used in performing measurements. The metric system is actually easier to use than the English system, as you will see shortly. The metric system uses prefixes to indicate the magnitude of a measured quantity. The prefix itself gives the conversion factor. You should memorize some of the common prefixes, as you will be using them on a regular basis.</p>
+<h2>Different systems</h2>
 
-  </article>
-  <!-- Presenter Notes -->
-</slide>
-
-<slide class="class" id="id" style="background:;">
-  <hgroup>
-    <h2>Different systems</h2>
-  </hgroup>
-  <article data-timings="">
-    <p>Length conversion</p>
+<p>Length conversion</p>
 
 <p>\(^{\circ}\mathrm{C} = (^{\circ}\mathrm{F} - 32)/1.8\) </p>
 
@@ -218,20 +207,14 @@ shinyServer(
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=2 title='Different systems'>
+        data-slide=2 title='R code and shiny (ui.R)'>
          2
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=3 title='R code and shiny (ui.R)'>
+        data-slide=3 title='R code and shiny (server.R)'>
          3
-      </a>
-    </li>
-    <li>
-      <a href="#" target="_self" rel='tooltip' 
-        data-slide=4 title='R code and shiny (server.R)'>
-         4
       </a>
     </li>
   </ul>
