--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <hgroup class="auto-fadein">
     <h1>Project-ddp2014</h1>
     <h2>Project presentation of Unit conversion dynamic UI</h2>
-    <p>Alok Juneja<br/>Presentation made on Sun Jun 15 18:09:13 2014</p>
+    <p>Alok Juneja<br/>Presentation made on Sun Jun 15 18:32:46 2014</p>
   </hgroup>
   <article></article>  
 </slide>
@@ -60,13 +60,20 @@
 <li><p>Imperial and US customary units:</p></li>
 </ol>
 
-<p>--- .class #id </p>
+  </article>
+  <!-- Presenter Notes -->
+</slide>
 
-<h2>Different systems</h2>
+<slide class="class" id="id" style="background:;">
+  <hgroup>
+    <h2>Temperature / Length Conversions</h2>
+  </hgroup>
+  <article data-timings="">
+    <p>Temperature conversion</p>
 
-<p>Length conversion</p>
+<p>\(^{\circ}\mathrm{C} = (^{\circ}\mathrm{F} - 32) * 5/9\)</p>
 
-<p>\(^{\circ}\mathrm{C} = (^{\circ}\mathrm{F} - 32)/1.8\) </p>
+<p>\(^{\circ}\mathrm{F} = (^{\circ}\mathrm{C} * 9/5) + 32\) </p>
 
   </article>
   <!-- Presenter Notes -->
@@ -207,14 +214,20 @@ shinyServer(
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=2 title='R code and shiny (ui.R)'>
+        data-slide=2 title='Temperature / Length Conversions'>
          2
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=3 title='R code and shiny (server.R)'>
+        data-slide=3 title='R code and shiny (ui.R)'>
          3
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=4 title='R code and shiny (server.R)'>
+         4
       </a>
     </li>
   </ul>
