--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     media="only screen and (max-device-width: 480px)" >
   <link rel="stylesheet" href="libraries/frameworks/io2012/css/slidify.css" >
   <link rel="stylesheet" href="libraries/highlighters/highlight.js/css/tomorrow.css" />
-  <base target="_blank"> <!-- This amazingness opens all links in a new tab. -->  <link rel=stylesheet href="./assets/css/project-ddp2014.css"></link>
-<link rel=stylesheet href="./assets/css/ribbons.css"></link>
+  <base target="_blank"> <!-- This amazingness opens all links in a new tab. -->  <link rel=stylesheet href="./assets/css/ribbons.css"></link>
+<link rel=stylesheet href="./assets/css/scroll.css"></link>
 
   
   <!-- Grab CDN jQuery, fall back to local if offline -->
@@ -35,7 +35,7 @@
   <hgroup class="auto-fadein">
     <h1>Project-ddp2014</h1>
     <h2>Project presentation of Unit conversion dynamic UI</h2>
-    <p>Alok Juneja<br/>Presentation made on Sun Jun 15 18:32:46 2014</p>
+    <p>Alok Juneja<br/>Presentation made on Mon Jun 16 18:06:24 2014</p>
   </hgroup>
   <article></article>  
 </slide>
@@ -49,15 +49,14 @@
   <article data-timings="">
     <p>A system of measurement is a set of units of measurement which we use in our daily life to quantify the things that we use/consume.</p>
 
-<p>System of measurement</p>
+<p>There are several systems of measurements used in different countries and in different fields of science depending on the requirements. To name few..</p>
 
 <ol>
-<li><p>Metric system:</p>
-
-<p>evolved since the adoption of the first well-defined system in France in 1795</p>
-
-<p>in the early metric system there were two fundamental or base units, the metre for length and the gram for mass.</p></li>
-<li><p>Imperial and US customary units:</p></li>
+<li>Metric system</li>
+<li>Imperial and US customary units</li>
+<li>Natural units</li>
+<li>Non-standard units</li>
+<li>Units of currency</li>
 </ol>
 
   </article>
@@ -66,46 +65,60 @@
 
 <slide class="class" id="id" style="background:;">
   <hgroup>
-    <h2>Temperature / Length Conversions</h2>
+    <h2>Temperature / Length / Volume Conversions</h2>
   </hgroup>
   <article data-timings="">
-    <p>Temperature conversion</p>
+    <p>As a demonstration, a simple unit converter is implemented in shiny. Following conversions have been used.</p>
+
+<p>Temperature conversion</p>
 
 <p>\(^{\circ}\mathrm{C} = (^{\circ}\mathrm{F} - 32) * 5/9\)</p>
 
 <p>\(^{\circ}\mathrm{F} = (^{\circ}\mathrm{C} * 9/5) + 32\) </p>
 
+<p>\(K = ^{\circ}\mathrm{C} + 273.15\) </p>
+
+<p>Length conversion</p>
+
+<p>\(Mile = Km * 0.62137\)</p>
+
+<p>\(Yard = Km * 1093.6\)</p>
+
+<p>Volume conversion</p>
+
+<p>\(Ml = US oz * 29.5735\)</p>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
 
 <slide class="class" id="id" style="background:;">
   <hgroup>
-    <h2>R code and shiny (ui.R)</h2>
+    <h2>Examples used in daily life</h2>
   </hgroup>
   <article data-timings="">
-    <pre><code class="r">library(shiny)
+    <pre><code class="r">#Q1. What is the human body temperature (37 degree celsius) in degree Fahrenheit?
+bd_cel=37
+(bd_cel*9/5)+32
+</code></pre>
 
-shinyUI(fluidPage(
-  headerPanel(&quot;Unit converter&quot;),
-  fluidRow(column(10,
-    fluidRow(column(4,
-      radioButtons(&quot;id1&quot;, &quot;Choose option&quot;,
-                   c(&quot;Temperature&quot; = &quot;Temperature&quot;,
-                     &quot;Length&quot; = &quot;Length&quot;)),
+<pre><code>## [1] 98.6
+</code></pre>
 
-      # This outputs the dynamic UI component based on the option above
-        uiOutput(&quot;ui1&quot;),
-      textInput(&#39;val1&#39;,&quot;Enter the value&quot;),
-        uiOutput(&quot;ui2&quot;)
+<pre><code class="r">#Q2. How many kilometers is equivalent to 1 mile in US?
+dis_mile=1
+dis_mile*1609.344/1000
+</code></pre>
 
-    ),
-    column(6,
-    mainPanel(
-        verbatimTextOutput(&quot;typ&quot;),
-        verbatimTextOutput(&quot;ans&quot;)
-  )))
-))))
+<pre><code>## [1] 1.609
+</code></pre>
+
+<pre><code class="r">#Q3. How much ml in 12.004 US oz coke can in US? 
+can_oz=12.004
+can_oz * 29.5735
+</code></pre>
+
+<pre><code>## [1] 355
 </code></pre>
 
   </article>
@@ -114,89 +127,20 @@ shinyUI(fluidPage(
 
 <slide class="class" id="id" style="background:;">
   <hgroup>
-    <h2>R code and shiny (server.R)</h2>
+    <h2>Application and shiny source code</h2>
   </hgroup>
   <article data-timings="">
-    <pre><code class="r">library(shiny)
+    <p>Shiny source code:</p>
 
-converter &lt;- function(id,from,to,val) {
-  switch(id,
-    &quot;Temperature&quot;={
-            switch(from,
-                &quot;Celsius&quot;={
-                    switch(to,
-                        &quot;Celsius&quot; = round(val,digits=6),
-                        &quot;Fahrenheit&quot; = round((val * 9/5) + 32,digits=6),
-                        &quot;Kelvin&quot; = round(val + 273.15,digits=6))
-                },
-                &quot;Fahrenheit&quot;={
-                    switch(to,
-                        &quot;Celsius&quot; = round((val - 32 ) * 5/9,digits=6),
-                        &quot;Fahrenheit&quot; = round(val,digits=6),
-                        &quot;Kelvin&quot; = round(((val - 32 ) * 5/9) + 273.15,digits=6))
-                },
-                &quot;Kelvin&quot;={
-                    switch(to,
-                    &quot;Celsius&quot; = round(val - 273.15,digits=6),
-                    &quot;Fahrenheit&quot; = round(((val - 273.15) * 9/5) + 32,digits=6),
-                    &quot;Kelvin&quot; = round(val,digits=6))
-                }
-            )
-        },
-        &quot;Length&quot; = {
-            switch(from,
-                &quot;Kilometers&quot; = {
-                    switch(to,
-                        &quot;Kilometers&quot; = round(val,digits=6),
-                        &quot;Miles&quot; = round(val * 0.62137,digits=6),
-                        &quot;Yards&quot; = round(val * 1093.6,digits=6))
-                },
-                &quot;Miles&quot; = {
-                    switch(to,
-                        &quot;Kilometers&quot; = round(val * 1.609344,digits=6),
-                        &quot;Miles&quot; = round(val,digits=6),
-                        &quot;Yards&quot; = round(val * 1760,digits=6))
-                },
-                &quot;Yards&quot; = {
-                    switch(to,
-                        &quot;Kilometers&quot; = round(val * 0.00091,digits=6),
-                        &quot;Miles&quot; = round(val * 0.00056818,digits=6),
-                        &quot;Yards&quot; = round(val,digits=6))
-                }
-            )
-        }
-    )
-} 
+<p><a href="https://gist.github.com/junejaalok/9dfe302679c032a80c47">https://gist.github.com/junejaalok/9dfe302679c032a80c47</a></p>
 
-shinyServer(
-  function(input, output) {
-    # Depending on input$id1, generate a different conversion units
-    # UI component and send it to the client.
+<p>Application on shinapps.io</p>
 
-    output$ui1 &lt;- renderUI({
-      if (is.null(input$id1))
-        return()
+<p><a href="https://junejaalok.shinyapps.io/project-ddp2014/">https://junejaalok.shinyapps.io/project-ddp2014/</a></p>
 
-        switch(input$id1,
-        &quot;Temperature&quot; = selectInput(&quot;from&quot;, &quot;From&quot;, c(&quot;Celsius&quot;, &quot;Fahrenheit&quot;, &quot;Kelvin&quot;)),
-        &quot;Length&quot; = selectInput(&quot;from&quot;, &quot;From&quot;, c(&quot;Kilometers&quot;, &quot;Miles&quot;,&quot;Yards&quot;)))
-        })
+<p>In case </p>
 
-    output$ui2 &lt;- renderUI({
-      if (is.null(input$id1))
-        return()
-
-    switch(input$id1,
-        &quot;Temperature&quot; = selectInput(&quot;to&quot;, &quot;To&quot;, c(&quot;Celsius&quot;, &quot;Fahrenheit&quot;, &quot;Kelvin&quot;)),
-        &quot;Length&quot; = selectInput(&quot;to&quot;, &quot;To&quot;, c(&quot;Kilometers&quot;, &quot;Miles&quot;,&quot;Yards&quot;)))
-        })
-
-
-  output$typ &lt;- renderText({paste(&quot;Convert&quot;, input$id1 )})  
-  output$ans &lt;- renderText({paste(input$val1, input$from, &quot;=&quot;,converter(toString(input$id1),toString(input$from),toString(input$to),as.double(input$val1)),input$to)})
-  }
-)
-</code></pre>
+<p><a href="https://junejaalok.shinyapps.io/project-ddp2014/?showcase=0">https://junejaalok.shinyapps.io/project-ddp2014/?showcase=0</a></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -214,19 +158,19 @@ shinyServer(
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=2 title='Temperature / Length Conversions'>
+        data-slide=2 title='Temperature / Length / Volume Conversions'>
          2
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=3 title='R code and shiny (ui.R)'>
+        data-slide=3 title='Examples used in daily life'>
          3
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=4 title='R code and shiny (server.R)'>
+        data-slide=4 title='Application and shiny source code'>
          4
       </a>
     </li>
