--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <hgroup class="auto-fadein">
     <h1>Project-ddp2014</h1>
     <h2>Project presentation of Unit conversion dynamic UI</h2>
-    <p>Alok Juneja<br/>Presentation made on Mon Jun 16 18:06:24 2014</p>
+    <p>Alok Juneja<br/>Presentation made on Mon Jun 16 18:43:06 2014</p>
   </hgroup>
   <article></article>  
 </slide>
@@ -138,7 +138,7 @@ can_oz * 29.5735
 
 <p><a href="https://junejaalok.shinyapps.io/project-ddp2014/">https://junejaalok.shinyapps.io/project-ddp2014/</a></p>
 
-<p>In case </p>
+<p>In case the DESCRIPTION  and README.md does not show you the full GUI on web browser, try to resize your web browser otherwise please use the following link... </p>
 
 <p><a href="https://junejaalok.shinyapps.io/project-ddp2014/?showcase=0">https://junejaalok.shinyapps.io/project-ddp2014/?showcase=0</a></p>
 
