--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     media="only screen and (max-device-width: 480px)" >
   <link rel="stylesheet" href="libraries/frameworks/io2012/css/slidify.css" >
   <link rel="stylesheet" href="libraries/highlighters/highlight.js/css/tomorrow.css" />
-  <base target="_blank"> <!-- This amazingness opens all links in a new tab. -->  <link rel=stylesheet href="./assets/css/ribbons.css"></link>
+  <base target="_blank"> <!-- This amazingness opens all links in a new tab. -->  <link rel=stylesheet href="./assets/css/codefont.css"></link>
+<link rel=stylesheet href="./assets/css/ribbons.css"></link>
 <link rel=stylesheet href="./assets/css/scroll.css"></link>
+<link rel=stylesheet href="./assets/css/txtfont.css"></link>
 
   
   <!-- Grab CDN jQuery, fall back to local if offline -->
@@ -35,7 +37,7 @@
   <hgroup class="auto-fadein">
     <h1>Project-ddp2014</h1>
     <h2>Project presentation of Unit conversion dynamic UI</h2>
-    <p>Alok Juneja<br/>Presentation made on Mon Jun 16 18:43:06 2014</p>
+    <p>Alok Juneja<br/>Presentation made on Tue Jun 17 01:19:39 2014</p>
   </hgroup>
   <article></article>  
 </slide>
@@ -63,7 +65,7 @@
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="class" id="id" style="background:;">
+<slide class="outfont" id="id" style="background:;">
   <hgroup>
     <h2>Temperature / Length / Volume Conversions</h2>
   </hgroup>
@@ -86,13 +88,13 @@
 
 <p>Volume conversion</p>
 
-<p>\(Ml = US oz * 29.5735\)</p>
+<p>\(mL = US oz * 29.5735\)</p>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="class" id="id" style="background:;">
+<slide class="codefont" id="id" style="background:;">
   <hgroup>
     <h2>Examples used in daily life</h2>
   </hgroup>
@@ -146,6 +148,29 @@ can_oz * 29.5735
   <!-- Presenter Notes -->
 </slide>
 
+<slide class="class" id="id" style="background:;">
+  <hgroup>
+    <h2>References</h2>
+  </hgroup>
+  <article data-timings="">
+    <p>Following web-pages helped me to get better insight of making shiny application and slidify presentation</p>
+
+<p><a href="http://slidify.org/samples/intro/index.html#1">http://slidify.org/samples/intro/index.html#1</a></p>
+
+<p><a href="http://stackoverflow.com/questions/23747704/font-size-and-line-spacing-r-slidify">http://stackoverflow.com/questions/23747704/font-size-and-line-spacing-r-slidify</a></p>
+
+<p><a href="https://gist.github.com/wch/9609200">https://gist.github.com/wch/9609200</a></p>
+
+<p><a href="https://gist.github.com/wch/9689441">https://gist.github.com/wch/9689441</a></p>
+
+<p><a href="https://github.com/ramnathv/slidify/issues/158">https://github.com/ramnathv/slidify/issues/158</a></p>
+
+<p><a href="https://gist.github.com/jeromyanglim/2716336">https://gist.github.com/jeromyanglim/2716336</a></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
     <slide class="backdrop"></slide>
   </slides>
   <div class="pagination pagination-small" id='io2012-ptoc' style="display:none;">
@@ -172,6 +197,12 @@ can_oz * 29.5735
       <a href="#" target="_self" rel='tooltip' 
         data-slide=4 title='Application and shiny source code'>
          4
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=5 title='References'>
+         5
       </a>
     </li>
   </ul>
