--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <hgroup class="auto-fadein">
     <h1>Project-ddp2014</h1>
     <h2>Project presentation of Unit conversion dynamic UI</h2>
-    <p>Alok Juneja<br/>Presentation made on Tue Jun 17 01:19:39 2014</p>
+    <p>Alok Juneja<br/>Presentation made on Tue Jun 17 01:39:27 2014</p>
   </hgroup>
   <article></article>  
 </slide>
@@ -166,6 +166,8 @@ can_oz * 29.5735
 <p><a href="https://github.com/ramnathv/slidify/issues/158">https://github.com/ramnathv/slidify/issues/158</a></p>
 
 <p><a href="https://gist.github.com/jeromyanglim/2716336">https://gist.github.com/jeromyanglim/2716336</a></p>
+
+<p><a href="https://github.com/rstudio/shinyapps/blob/master/guide/guide.md">https://github.com/rstudio/shinyapps/blob/master/guide/guide.md</a></p>
 
   </article>
   <!-- Presenter Notes -->
