--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <hgroup class="auto-fadein">
     <h1>Project-ddp2014</h1>
     <h2>Project presentation of Unit conversion dynamic UI</h2>
-    <p>Alok Juneja<br/>Presentation made on Tue Jun 17 01:39:27 2014</p>
+    <p>Alok Juneja<br/>Presentation made on Fri Jun 20 00:20:32 2014</p>
   </hgroup>
   <article></article>  
 </slide>
@@ -99,7 +99,9 @@
     <h2>Examples used in daily life</h2>
   </hgroup>
   <article data-timings="">
-    <pre><code class="r">#Q1. What is the human body temperature (37 degree celsius) in degree Fahrenheit?
+    <p>We do conversions from one unit to another in our daily life. Few examples..</p>
+
+<pre><code class="r">#Q1. What is the human body temperature (37 degree celsius) in degree Fahrenheit?
 bd_cel=37
 (bd_cel*9/5)+32
 </code></pre>
