--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="libraries/highlighters/highlight.js/css/tomorrow.css" />
   <base target="_blank"> <!-- This amazingness opens all links in a new tab. -->  <link rel=stylesheet href="libraries/widgets/bootstrap/css/bootstrap.css"></link>
 <link rel=stylesheet href="./assets/css/codefont.css"></link>
+<link rel=stylesheet href="./assets/css/custom-alok.css"></link>
 <link rel=stylesheet href="./assets/css/ribbons.css"></link>
 <link rel=stylesheet href="./assets/css/scroll.css"></link>
 <link rel=stylesheet href="./assets/css/txtfont.css"></link>
@@ -38,7 +39,7 @@
   <hgroup class="auto-fadein">
     <h1>Project-ddp2014</h1>
     <h2>Project presentation of Unit conversion dynamic UI</h2>
-    <p>Alok Juneja<br/>Presentation made on Fri Jun 20 01:12:40 2014</p>
+    <p>Alok Juneja<br/>Presentation made on Fri Jun 20 02:26:28 2014</p>
   </hgroup>
   <article></article>  
 </slide>
@@ -74,7 +75,7 @@ img {
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="outfont" id="id" style="background:;">
+<slide class="txtfont" id="id" style="background:;">
   <hgroup>
     <h2>Temperature / Length / Volume Conversions</h2>
   </hgroup>
@@ -103,7 +104,7 @@ img {
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="codefont" id="id" style="background:;">
+<slide class="codefont txtfont" id="id" style="background:;">
   <hgroup>
     <h2>Examples used in daily life</h2>
   </hgroup>
@@ -138,40 +139,19 @@ can_oz * 29.5735
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="class" id="id" style="background:;">
+<slide class="span12" id="id" style="background:;">
   <hgroup>
-    <h2>Application and shiny source code</h2>
-  </hgroup>
-  <article data-timings="">
-    <p>Shiny source code:</p>
-
-<p><a href="https://gist.github.com/junejaalok/9dfe302679c032a80c47">https://gist.github.com/junejaalok/9dfe302679c032a80c47</a></p>
-
-<p>Application on shinapps.io</p>
-
-<p><a href="https://junejaalok.shinyapps.io/project-ddp2014/">https://junejaalok.shinyapps.io/project-ddp2014/</a></p>
-
-<p>In case the DESCRIPTION  and README.md does not show you the full GUI on web browser, try to resize your web browser otherwise please use the following link... </p>
-
-<p><a href="https://junejaalok.shinyapps.io/project-ddp2014/?showcase=0">https://junejaalok.shinyapps.io/project-ddp2014/?showcase=0</a></p>
-
-  </article>
-  <!-- Presenter Notes -->
-</slide>
-
-<slide class="span12" id="slide-5" style="background:;">
-  <hgroup>
-    <h2>Carousel</h2>
+    <h2>Shiny application screen-shots</h2>
   </hgroup>
   <article data-timings="">
     
 
-<div id="slide-5-carousel" class="carousel slide span12" data-interval="false">
+<div id="id-carousel" class="carousel slide span12" data-interval="false">
   <!-- Indicators -->
   <ol class="carousel-indicators">
-    <li data-target="#slide-5-carousel" data-slide-to="1" class="active"></li>
-    <li data-target="#slide-5-carousel" data-slide-to="2" class=""></li>
-    <li data-target="#slide-5-carousel" data-slide-to="3" class=""></li>
+    <li data-target="#id-carousel" data-slide-to="1" class="active"></li>
+    <li data-target="#id-carousel" data-slide-to="2" class=""></li>
+    <li data-target="#id-carousel" data-slide-to="3" class=""></li>
   </ol>
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
@@ -192,14 +172,35 @@ can_oz * 29.5735
     </div>
   </div>
   <!-- Controls -->
-  <a class="left carousel-control" href="#slide-5-carousel" data-slide="prev">&lsaquo;</a>
-  <a class="right carousel-control" href="#slide-5-carousel" data-slide="next">&rsaquo;</a>
+  <a class="left carousel-control" href="#id-carousel" data-slide="prev">&lsaquo;</a>
+  <a class="right carousel-control" href="#id-carousel" data-slide="next">&rsaquo;</a>
 </div>
   </article>
   <!-- Presenter Notes -->
 </slide>
 
 <slide class="class" id="id" style="background:;">
+  <hgroup>
+    <h2>Application and shiny source code</h2>
+  </hgroup>
+  <article data-timings="">
+    <p>Shiny source code:</p>
+
+<p><a href="https://gist.github.com/junejaalok/9dfe302679c032a80c47">https://gist.github.com/junejaalok/9dfe302679c032a80c47</a></p>
+
+<p>Application on shinapps.io</p>
+
+<p><a href="https://junejaalok.shinyapps.io/project-ddp2014/">https://junejaalok.shinyapps.io/project-ddp2014/</a></p>
+
+<p>In case of the presence of the DESCRIPTION, README.md, server.R and ui.R do not show you the full GUI on web browser, try to resize your web browser otherwise please use the following link... </p>
+
+<p><a href="https://junejaalok.shinyapps.io/project-ddp2014/?showcase=0">https://junejaalok.shinyapps.io/project-ddp2014/?showcase=0</a></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="txtfont" id="id" style="background:;">
   <hgroup>
     <h2>References</h2>
   </hgroup>
@@ -220,7 +221,11 @@ can_oz * 29.5735
 
 <p><a href="https://github.com/rstudio/shinyapps/blob/master/guide/guide.md">https://github.com/rstudio/shinyapps/blob/master/guide/guide.md</a></p>
 
+<p><a href="https://github.com/ramnathv/slidify/issues/264">https://github.com/ramnathv/slidify/issues/264</a></p>
+
 <p><a href="https://github.com/ramnathv/carouselLayout">https://github.com/ramnathv/carouselLayout</a></p>
+
+<p><a href="https://github.com/ramnathv/carouselLayout/issues/1">https://github.com/ramnathv/carouselLayout/issues/1</a></p>
 
 <p><a href="http://stackoverflow.com/questions/16904054/slidify-how-to-position-an-image">http://stackoverflow.com/questions/16904054/slidify-how-to-position-an-image</a></p>
 
@@ -252,13 +257,13 @@ can_oz * 29.5735
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=4 title='Application and shiny source code'>
+        data-slide=4 title='Shiny application screen-shots'>
          4
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=5 title='Carousel'>
+        data-slide=5 title='Application and shiny source code'>
          5
       </a>
     </li>
